adguard/adguardingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: adguard
  namespace: adguard
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.192-168-0-37.nip.io
    http:
      paths:
      - backend:
          service:
            name: adguardui
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
